# pi05-deploy

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: deploy.md
fixtures/: pi05_minimal_fixture.json
results/agx_int8_suffix_graph/: README.md  trt_int8_open_loop_full_eval.json  trt_int8_prefix_lm_suffix_graph_latency.json  trt_int8_stage_split.json  trt_int8_suffix_graph_latency.json  trt_int8_suffix_graph_profile.json  trt_int8_suffix_vs_full_graph_seed_parity.json
scripts/: benchmark_pi05.py  bootstrap_env.sh  build_trt_engine.py  build_trt_ptq_engine.py  capture_pi05_trt_inputs.py  check_minimal_fixture.py  download_dataset.py  download_pi05_assets.py  eval_open_loop_pi05.py  export_pi05_prefix_onnx.py  export_pi05_suffix_onnx.py  install_jetson_pi05_stack.sh  make_fixed_eval_split.py  quantize_suffix_onnx_qdq.py  rewrite_suffix_onnx_fp64_trig_to_fp32.py  setup_pi05_stack.py
src/pi05_orin/: __init__.py  paths.py  pi05_runtime.py  presets.py  splits.py  trt_ptq.py  trt_runner.py  trt_wrappers.py
