[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi05-orin"
version = "0.1.0"
description = "Deploy-oriented PI0.5 runtime and TensorRT tooling for Jetson Orin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.4",
  "torchvision>=0.19",
  "transformers>=4.49,<6",
  "lerobot==0.5.1",
  "huggingface_hub>=0.30",
  "numpy>=1.26",
  "onnx>=1.16",
  "onnxruntime>=1.19",
  "safetensors>=0.4.3",
  "sentencepiece>=0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
