[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi05-orin"
version = "0.1.0"
description = "Deploy-oriented PI0.5 runtime and TensorRT tooling for Jetson Orin"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Jinlong Wu"}
]
dependencies = [
  "torch>=2.4",
  "torchvision>=0.19",
  "transformers>=4.49,<6",
  "lerobot==0.5.1",
  "huggingface_hub>=0.30",
  "numpy>=1.26",
  "onnx>=1.16",
  "onnxruntime>=1.19",
  "safetensors>=0.4.3",
  "sentencepiece>=0.2",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/Jinlong-cs/pi05-deploy"
Upstream-LeRobot = "https://github.com/huggingface/lerobot"
PI05-Model = "https://huggingface.co/lerobot/pi05_base"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
